styles.css
.pb-num {
    font-size: xxx-large;
    margin: 2rem;
}
.pb-num.active {
    font-weight: 1000;
}
.digitala-progress-bar {
    font-size: xx-large;
    display: flex;
    margin-bottom: 1em;
    margin-top: 1em;
    height: 2.5em;
}
.pb-step {
    flex: 1;
    border-top: 2px solid lightgray;
    border-bottom: 2px solid lightgray;
    text-align: center;
}
.pb-step.active {
    background-color: lightgray;
}

.pb-step.active.first {
    border-radius: 10px 0 0 10px;
}

.pb-step.active.last {
    border-radius: 0 10px 10px 0;
}
.pb-spacer {
    width: 100%;
    border-top: 2px solid lightgray;
    border-bottom: 2px solid lightgray;
}

.pb-spacer-left > svg {
    display: block;
    margin-left: auto;
}

.pb-spacer-left > svg,
.pb-spacer-right > svg {
    width: auto;
}

.digitala-column {
    margin: 1vh;
}

.digitala-card {
    margin-top: 1vh;
    margin-bottom: 1vh;
}

.navbuttons {
    position: relative;
    left: 45%;
}

.scrollbox200 {
    height: 200px;
    line-height: 2em;
    overflow: auto;
}

.scrollbox400 {
    height: 408px;
    line-height: 2em;
    overflow: auto;
}

.btn.btn-primary.record-btn {
    display: inline-block;
}

.btn.btn-primary.stopRecord-btn {
    display: none;
}

.btn.btn-primary.listen-btn {
    display: inline-block;
}

#microphoneIcon {
    margin: auto;
    position: relative;
}

#microphoneIconBox {
    display: flex;
    position: absolute;
    width: 150px;
    height: 150px;
    border-radius: 50%;
    border: 2.5px dashed transparent;
    animation: spin 60s linear infinite;
}

@keyframes spin {
    100% {
        transform: rotateZ(360deg);
    }
}

.feedbackcontainer {
    position: fixed;
    text-align: left;
    vertical-align: middle;
    text-indent: 2em;
    font-size: 16px;
    font-family: Arial, Helvetica, sans-serif;
    border-radius: 35px 50px 50px 35px;
    line-height: 4vw;
    bottom: 1vw;
    right: 1vw;
    height: 4vw;
    width: 15vw;
    max-height: 4vw;
    max-width: 15vw;
    background-color: lavender;
}

#collapser {
    text-align: center;
    vertical-align: middle;
    position: fixed;
    text-indent: -0.5em;
    font-size: 16px;
    font-family: Arial, Helvetica, sans-serif;
    border-radius: 50px 50px 50px 50px;
    height: 4vw;
    width: 4vw;
    max-height: 4vw;
    max-width: 4vw;
    display: inline-block;
    bottom: 1vw;
    right: 1vw;
    z-index: 1;
    background-color: rgb(0, 114, 178);
}

#feedbacksite {
    position: fixed;
    bottom: 6vw;
    right: 1vw;
    height: 40vw;
    width: 25vw;
    z-index: 500;
}

#feedback {
    position: fixed;
    bottom: 2.5vw;
    right: 2.5vw;
}

